fix overflow stuff

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,8 +13,7 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
-  overflow: hidden;
-  /* Prevents vertical scroll */
+  overflow-x: hidden;
 }
 
 body {
@@ -30,5 +29,5 @@ app-root {
 
 main {
   flex: 1;
-  overflow: auto;
+  overflow-y: auto;
 }
